@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: February 19, 2011</p>
+      <p>Last Updated: February 21, 2011</p>
     </td>
   </tr>
 </table>
@@ -2040,6 +2040,9 @@ nuttx-5.18 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
        a USB host HID keyboard configuraion.
     * drivers/usbhost/hid_parser.c -- Leverages the LUFA HID parser written by
       Dean Camera.
+	* lib/lib_getopt() -- Correct an error in the getopt() logic: On certain error
+	  return cases, the state was not being reset correcly and incorrect behaviors
+	  could occur on subsequent calls to getopt().
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
